--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title> Santhosh D Portfolio </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Santhosh D Website " name="keywords">
+        <meta content="Santhosh D Website " name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -36,15 +36,15 @@
                         <div class="typed-text d-none"> Software Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
-                        <a class="mx-2" href="https://x.com/Santhosh_Yew?t=k8dLl7lZ6C_hQd0ynPmC_Q&s=09"><i class="fab fa-twitter"></i></a>
-                        <a class="mx-2" href="https://www.facebook.com/don.santhosh.9849?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                        <a class="mx-2" href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="mx-2" href="https://www.instagram.com/santhosh_27kb?igsh=eTBudjkyYnd1Zjl5"><i class="fab fa-instagram"></i></a>
-                        <a class="mx-2" href="https://github.com/SanthoshSpark"><i class="fab fa-github"></i></a>
+                        <a class="mx-2" href="https://x.com/Santhosh_Yew?t=k8dLl7lZ6C_hQd0ynPmC_Q&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="mx-2" href="https://www.facebook.com/don.santhosh.9849?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="mx-2" href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="mx-2" href="https://www.instagram.com/santhosh_27kb?igsh=eTBudjkyYnd1Zjl5" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="mx-2" href="https://github.com/SanthoshSpark" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
                         <a href="" class="btn btn-block border-right">Download CV</a>
-                        <a href="#contact" class="btn btn-block btn-scroll">Contact Me</a>
+                        <a href="#contact" class="btn btn-block border-right">Contact Me</a>
                     </div>
                 </div>
                 <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
@@ -68,7 +68,7 @@
                                     <h5 class="d-inline text-primary">Birthday:</h5> 27 Feb 2001
                                 </div>
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Degree:</h5> Master
+                                    <h5 class="d-inline text-primary">Degree:</h5> Master of science 
                                 </div>
                                 <!-- div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Experience:</h5> 10 Years
@@ -409,10 +409,10 @@
                 <div class="container-fluid bg-white pt-5 px-0">
                     <div class="container bg-dark text-light text-center py-5">
                         <div class="d-flex justify-content-center mb-4">
-                            <a class="btn btn-outline-primary btn-square mr-2" href="https://github.com/SanthoshSpark"><i class="fab fa-github"></i></a>
-                            <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/don.santhosh.9849?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/santhosh_27kb?igsh=eTBudjkyYnd1Zjl5"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-2" href="https://github.com/SanthoshSpark" target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/don.santhosh.9849?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/santhosh_27kb?igsh=eTBudjkyYnd1Zjl5" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex justify-content-center mb-3">
                             <a class="text-white" href="#">Privacy</a>
@@ -423,7 +423,7 @@
                             <span class="px-3">|</span>
                             <a class="text-white" href="#">Help</a>
                         </div>
-                        <p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                        <p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://santhoshspark.github.io/Santhosh-_Portfolio/" target="_blank">Santhosh Web</a></p>
                     </div>
                 </div>
                 <!-- Footer End -->
