--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <a class="mx-2" href="https://github.com/SanthoshSpark" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
-                        <a href="" class="btn btn-block border-right">Download CV</a>
-                        <a href="#contact" class="btn btn-block border-right">Contact Me</a>
+                        <a href="img/Santhosh D Resume.pdf" class="btn btn-block border-right">Download CV</a>
+                        <a href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-block border-right">Contact Me</a>
                     </div>
                 </div>
                 <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
