--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
                         <a href="img/Santhosh D Resume.pdf" class="btn btn-block border-right">Download CV</a>
-                        <a href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-block border-right">Contact Me</a>
+                        <a href="https://www.linkedin.com/in/santhosh-d-2172781b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="btn btn-block border-right">Contact Me</a>
                     </div>
                 </div>
                 <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
